Test/errors/err_unknown_field.cb
struct Foo
{
    int x = 0;
};

extern int main()
{
    Foo f;
    expect_error("Unknown identifier");
    int y = f.bogusField;
    return 0;
}
